--- a/cirDraw/tools/templates/tools/search.html
+++ b/cirDraw/tools/templates/tools/search.html
@@ -68,10 +68,13 @@
 
   <!-- <p id="aftersubmit"></p> -->
   <p id="processtip"></p>
-  <div class="chart-container" style="position: relative; height:80vh; width:60vw">
-    <div><p id="aftersubmit"></p></div>
-    
-    <canvas id="myChart"></canvas>
+  <div><p id="aftersubmit"></p></div>
+  <div class="horizon-flex-contain">
+    <div class="chart-container" style="position: relative; height:80vh; width:45vw">
+      <canvas id="myChart"></canvas> 
+    </div>
+    <div id="legend_container"></div>
+    <div id="duration_container"></div>
   </div>
   <canvas id="circles" style="position: relative; height:10vh; width:60vw"></canvas>
   
