--- a/cirDraw/templates/base.html
+++ b/cirDraw/templates/base.html
@@ -29,8 +29,12 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" rel="stylesheet">
   <link href="{% static 'base/css/agency.css' %}" rel="stylesheet">
   <link href="{% static 'base/css/circCirc.css' %}" rel="stylesheet">
+  <link href="{% static 'base/css/select.css' %}" rel="stylesheet">
+  <link href="{% static 'base/css/tipso.css' %}" rel="stylesheet">
   <link href="{% static 'base/css/manual.css' %}" rel="stylesheet">
   <link href="{% static 'base/css/download.css' %}" rel="stylesheet">
+  <link href="{% static 'base/css/loading.min.css' %}" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css"></script>
 
 </head>
 
