update square point in the plot

--- a/cirDraw/templates/base.html
+++ b/cirDraw/templates/base.html
@@ -5,9 +5,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="An interactive online platform for circRNA analysis, visualization and modifications annotation">
-  <meta name="author" content="Milk Zheng, Jack Li">
-  <meta name="keywords" content="circDraw, circRNA, circRNA visualization, RNA modifications, Sun Yat-sen University">
+  <meta name="description" content="An interactive online platform for E2 database query visualization">
+  <meta name="author" content="Tianqin Li">
+  <meta name="keywords" content="E2 gene visualization, bioinformatics, breast cancer">
 
   <title>E2 Database</title>
   <link rel="icon" href="{% static 'base/img/logo.png' %}">
