--- a/cirDraw/templates/base.html
+++ b/cirDraw/templates/base.html
@@ -55,20 +55,17 @@
             <a class="nav-link js-scroll-trigger" href="{% url 'example' %}">Example</a>
           </li> -->
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="{% url 'home' %}">Home</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="{% url 'tools' %}">Search</a>
           </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/diy/">Draw</a>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="{% url 'tools' %}">MetaData</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="{% url 'download' %}">Download</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="{% url 'manual' %}">Manual</a>
-          </li> -->
-          <!-- <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="{% url 'about' %}">About</a>
-          </li> -->
+          </li>
         </ul>
       </div>
     </div>
@@ -80,7 +77,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; <br></span>
+          <span class="copyright">Copyright &copy; UPMC <br></span>
         </div>
         <div class="col-md-4">
           <br>
