--- a/cirDraw/tools/templates/tools/index.html
+++ b/cirDraw/tools/templates/tools/index.html
@@ -19,12 +19,12 @@
   
  
   <!-- Features -->
-  <!-- <section id="services">
+  <section id="services">
         <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Features</h2>
-            <h3 class="section-subheading text-muted">What is circDraw?</h3>
+            <h2 class="section-heading text-uppercase">About</h2>
+            <h3 class="section-subheading text-muted">EstroGene Database is a searchable online visualization platformEstroGene Database is a searchable online visualization platformEstroGene Database is a searchable online visualization platformEstroGene Database is a searchable online visualization platformEstroGene Database is a searchable online visualization platformEstroGene Database is a searchable online visualization platformEstroGene Database is a searchable online visualization platformEstroGene Database is a searchable online visualization platform;EstroGene Database is a searchable online visualization platform;EstroGene Database is a searchable online visualization platform;EstroGene Database is a searchable online visualization platform;EstroGene Database is a searchable online visualization platform;EstroGene Database is a searchable online visualization platform</h3>
             </div>
         </div>
         <div class="row text-center">
@@ -58,6 +58,6 @@
             </div>
         </div>
         </div>
-    </section> -->
+    </section>
   {% endblock %}
 
