--- a/cirDraw/information/templates/information/about.html
+++ b/cirDraw/information/templates/information/about.html
@@ -9,7 +9,7 @@
             <h2 class="section-heading text-uppercase" tag="citation">Contact Us</h2>
             <h3 class="section-subheading text-muted" style="margin-bottom: 35px;">The introduction of the authors and citation</h3>
             <h4>Authors</h4>
-            <p> Li Tianqin | tianqinl</p>
+            
             <h4>PI</h4>
             <p> </p>
             <h4>Citation</h4>
@@ -17,45 +17,48 @@
           </div>
         </div>
       </div>
-    </section>
+      <br><br><br><br><br><br><br><br>
 
-    <section id="other-tools">
+    
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <h2 class="section-heading text-uppercase" tag="citation">Other Tools</h2>
-            <h3 class="section-subheading text-muted" style="margin-bottom: 35px;">Our lab have developed several databases and software for ncRNA research.</h3>
-            <h4>starBase v2.0 <a href="http://starbase.sysu.edu.cn/starbase2/index.php"><i class="fas fa-external-link-alt"></i></a></h4>
-            <p>Decoding miRNA-ceRNA, miRNA-ncRNA and protein-RNA interaction networks from large-scale CLIP-Seq data.<br>(Li et al. Nucleic Acids Res. 2014;42:D92-7)</p>
-            <h4>ChIPBase v2.0 <a href="http://rna.sysu.edu.cn/chipbase/"><i class="fas fa-external-link-alt"></i></a></h4>
-            <p>Decoding transcriptional regulatory networks of non-coding RNAs and protein-coding genes from ChIP-seq data.<br>(Zhou et al. Nucleic Acids Res. 2017;45(D1):D43-D50)</p>
-            <h4>RMBase v2.0 <a href="http://rna.sysu.edu.cn/rmbase/"><i class="fas fa-external-link-alt"></i></a></h4>
-            <p>Deciphering the Map of RNA Modifications from Epitranscriptome Sequencing Data.<br>(Sun et al. Nucleic Acids Res. 2015; doi: 10.1093/nar/gkv1036.)</p>
-            <h4>deepBase v2.0 <a href="http://rna.sysu.edu.cn/deepBase/"><i class="fas fa-external-link-alt"></i></a></h4>
-            <p>Identification, expression, evolution and function of small RNAs, LncRNAs and circular RNAs from deep-sequencing data.<br>(Zheng et al. Nucleic Acids Res. 2015 Nov 20. pii: gkv1273.)</p>
-            <h4>dreamBase <a href="http://rna.sysu.edu.cn/dreamBase/"><i class="fas fa-external-link-alt"></i></a></h4>
-            <p>DNA modification, RNA regulation and protein binding of expressed pseudogenes in human health and disease.<br>(Zheng et al. Nucleic Acids Res. 2018 Jan 4;46(D1):D85-D91.)</p>
-            <h4>tRF2Cancer <a href="http://rna.sysu.edu.cn/tRFfinder/"><i class="fas fa-external-link-alt"></i></a></h4>
-            <p>A web server to detect tRNA-derived small RNA fragments (tRFs) and their expression in multiple cancers.<br>(Zheng et al. Nucleic Acids Res. 2016 Jul 8;44(W1):W185-93.)</p>
+            <h2 class="section-heading text-uppercase" tag="citation">License</h2>
+            <!-- <h3 class="section-subheading text-muted" style="margin-bottom: 35px;">The introduction of the authors and citation</h3> -->
+            <p>Data used in this project is under ?? LICENSE. The service of EstroGeneDB is under MIT Lisence:</p>
+            <div>Copyright <YEAR> <COPYRIGHT HOLDER>
 
+              Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+              <br><br>
+                <p>The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.</p>
+                <p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
+              <br><br>
+              </div>
+          </div>
+        </div>
+      </div>
+    
 
+      <br><br><br><br>
+    
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <h2 class="section-heading text-uppercase" tag="citation">Fundings</h2>
+            <!-- <h3 class="section-subheading text-muted" style="margin-bottom: 35px;">The introduction of the authors and citation</h3> -->
+            <p>Data used in this project is under ?? LICENSE. The service of EstroGeneDB is under MIT Lisence:</p>
+            <div>Copyright <YEAR> <COPYRIGHT HOLDER>
+
+              Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+              <br><br>
+                <p>The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.</p>
+                <p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
+              <br><br>
+              </div>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="TermOfUse">
-          <div class="container">
-                  <div class="row">
-                    <div class="col-lg-12">
-                      <h2 class="section-heading text-uppercase" tag="TermOfUse">Term of Use</h2>
-                      <h3 class="section-subheading text-muted" style="margin-bottom: 35px;">The introduction of labotary and citation</h3>
-                      <h4>Welcome to use E2 Database</h4>
-                      <p>By using this website (the “Site”) and services (together with the Site, the “Services”) offered by the authors. You are agreeing to these rules.</p>
-                      
-                      <h4></h4>
-                    </div>
-                  </div>
-                </div>
-    </section>
+    
 {% endblock %}
