--- a/cirDraw/templates/base.html
+++ b/cirDraw/templates/base.html
@@ -34,6 +34,7 @@
   <link href="{% static 'base/css/manual.css' %}" rel="stylesheet">
   <link href="{% static 'base/css/download.css' %}" rel="stylesheet">
   <link href="{% static 'base/css/loading.min.css' %}" rel="stylesheet">
+  <link href="{% static 'base/css/mainpage.css' %}" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css"></script>
 
 </head>
@@ -43,7 +44,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="{% url 'home' %}">E2 Database</a>
+      <a class="navbar-brand js-scroll-trigger" href="{% url 'home' %}">EstroGeneDB</a>
       <button class="navbar-toggler navbar-toggler-right" role="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
@@ -61,10 +62,13 @@
             <a class="nav-link js-scroll-trigger" href="{% url 'tools' %}">Search</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="{% url 'tools' %}">MetaData</a>
+            <a class="nav-link js-scroll-trigger" href="{% url 'metadata' %}">MetaData</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="{% url 'about' %}">About</a>
+            <a class="nav-link js-scroll-trigger" href="{% url 'manual' %}">Help</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="{% url 'about' %}">Contact</a>
           </li>
         </ul>
       </div>
